
CHANGES:

- ver. 0.20.005 - <b>2021.04.21</b> Changed: 
  - Added ALSA tests in main.cpp and Launch configuration for Linux
  - Added to DSP_types.h a SOUND_object_t abstract class, a wrapper for different sound cards' API
  - Added WMM_object_t abstract class, a wrapper for Windows MultiMedia API
  - DSP::u::AudioOutput now uses SOUND_object_t (currently just WMM_object_t) for soundcard API

- ver. 0.20.004 - <b>2021.04.06</b> Changed: 
  - Fixed makefiles for Linux - install and examples compilation works
  - Initial work on sockets support for Linux

- ver. 0.20.003 - <b>2021.04.06</b> Changed: 
  - DSP::E_LS_Mode => DSP::e::LogState
  - DSP::LogMode => DSP::e::LogMode
  - corrections in linux compilation

- ver. 0.20.001 - <b>2021.04.03</b> Changed: 
  - DSP_libver, DSP_lib_version and DSP_lib_version_string moved int o DSP:: namespace: DSP::libver, DSP::lib_version and DSP::lib_version_string
  - moved enums into DSP::e:: namespace: DSPe_* => DSP::e::*
  - slight modifications in enum types names: DSPe_offset_mode => DSP::e::OffsetMode, DSPe_Modulation_type => DSP::e::ModulationType, DSPe_buffer_type => DSP::e::BufferType

- ver. 0.20.000 - <b>2021.04.02</b> Changed: 
  - all DSPu_ moved into DSP::u:: namespace with some capitalization changes in blocks names
  - DSP_modules.cpp - removed some of the uses of new and delete
  - DSPu_callback_ptr, DSPu_buffer_callback_ptr, DSPu_notify_callback_ptr => DSP::Callback_ptr, DSP::Buffer_callback_ptr, DSP::Notify_callback_ptr
  - DSP::Rand => DSP::Randomization
  - DSP::u::rand, DSP::u::binrand => DSP::u::Rand, DSP::u::BinRand
  - removed uses of BYTE, WORD, DWORD, MAXDWORD and MAXWORD
  - added additional processign cycles in asynchronous.cpp and callback.cpp examples to avoid audio truncation 
  - replaces test_wav with DSPElib.wav
  - DSPu_FIR use now vectors instead of pointers as input parameters

- ver. 0.19.024 - <b>2021.04.01</b> Changed: 